# JNITest

./: .gitignore  CMakeLists.txt  pom.xml
.github/workflows/: build-publish.yml  build.yml
src/main/c/: App.c  App.h
src/main/java/com/example/: App.java
src/test/java/: JNITest.java
toolchain/: windows-amd64.cmake
